--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,31 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+#myform{
+  margin-left: 400px;
+  border: 1px solid;
+  padding-top: 50px;
+  background-color: antiquewhite;
+
+}
+h3{
+  font-family: cursive;
+  color: green;
+  text-align: center;
+
+}
+.mytable{
+ margin-left: 40px;
+  margin-right: 40px;
+
+}
+.mymenu{
+  text-align: center;
+  padding: 50px;
+}
+.tableheading{
+  background-color:black;
+  color: white;
+  font-weight: bold;
+}
+
