--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   margin-left: 400px;
   border: 1px solid;
   padding-top: 50px;
-  background-color: antiquewhite;
+  background-color: white;
 
 }
 h3{
@@ -16,6 +16,19 @@ h3{
   text-align: center;
 
 }
+.myrow{
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+h1{
+
+  color: black;
+  font-family: Arial;
+}span{
+   color: red;
+ }
+
 .mytable{
  margin-left: 40px;
   margin-right: 40px;
